styles.css
h1 {
   
display: block;
margin: 10px auto;
  color: whitesmoke;
  font-size: 2.5rem;
}

body {
    font-family:'Rubik', sans-serif;
    margin:0;
}

p {
    font-weight: 500;
    color:gray
}

#map {
    position: relative;
    height: 75vh;
    z-index: 1;
    width:100%;
    
}

#ip-bar {
   flex:1;
height:50px;
text-align: center;
font-size: 1.45rem;

}

#banner {
  width: 100%;
  height: 250px;
  object-fit: cover;
  display: block;
}
#hero-section {
  position: relative;
}

#input {
display: flex;
justify-content: center;
margin: 1rem auto;
width: 80%;
}

#hero {
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  align-items: center;
  width:100%;
 
}
#arrow {
   
    z-index: 3;
    height:10px;
    width:10px;
  
}

#submit-btn {
display: flex;
  align-items: center;
  justify-content: center;

  height: 56px;
  width: 56px;

  background-color: rgb(59, 59, 59);

  border: none;              
  padding: 0;               
  cursor: pointer;

  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
}

#submit-btn:hover {
    background-color: black;
    cursor: pointer;
}

#info {
  position: absolute;
  top: 70%;              /* adjust based on banner height */
  left: 50%;
  transform: translateX(-50%);

  width: 90%;
  max-width: 1000px;

  display: flex;
  background: white;
  border-radius: 10px;
  box-shadow: 0 10px 25px rgba(0,0,0,0.15);

  z-index: 10;
}

.card {
    flex: 1;
  padding: 10px;
  border-right: 1px solid gray;
text-align: center;

}

.card:last-child {
  border-right: none;
}

#error-text {
    color:red;
}

#error-popup {
  position: fixed;
  top: 20px;
  left: 50%;
  transform: translateX(-50%);
  
  background-color: #ff4d4d;
  color: white;
  padding: 12px 20px;
  border-radius: 8px;
  
  font-weight: 500;
  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
  
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.3s ease;
  z-index: 3;
}

#error-popup.show {
  opacity: 1;
}

.sr-only {
position: absolute;
width: 1px;
height: 1px;
padding: 0;
margin: -1px;
overflow: hidden;
clip: rect(0,0,0,0);
white-space: nowrap;
border: 0;
}

@media screen and (max-width: 768px) {
  body {
    align-items: flex-start; /* Aligns content to the top */
  }

 #info {
    position: relative;   /* important */
    top: auto;            /* remove desktop positioning */
    left: auto;
    transform: none;

    flex-direction: column;
    margin: auto auto;
    width: 100%;
  }

  
  #banner {
    width:100vw;
    min-height:20vh;
   display: block;
}

h1 {
   
display: block;
margin: 10px auto;
  color: whitesmoke;
  font-size: 2rem;
}

#h2-container {
    position: relative;
    display: flex;
    justify-content: center;
    flex-direction: column;
}
}

